test/parse-errors/if-without-else.nz
f void()
	if
		true
			pass
